3.3.4/_sources/gallery/axisartist/axis_direction_demo_step04.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axisartist/axis_direction_demo_step04.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_axis_direction_demo_step04.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axisartist_axis_direction_demo_step04.py:


==========================
Axis Direction Demo Step04
==========================

.. GENERATED FROM PYTHON SOURCE LINES 7-61



.. image:: /gallery/axisartist/images/sphx_glr_axis_direction_demo_step04_001.png
    :alt: axis direction demo step04
    :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import mpl_toolkits.axisartist as axisartist


    def setup_axes(fig, rect):
        ax = axisartist.Subplot(fig, rect)
        fig.add_axes(ax)

        ax.set_ylim(-0.1, 1.5)
        ax.set_yticks([0, 1])

        ax.axis[:].set_visible(False)

        ax.axis["x1"] = ax.new_floating_axis(1, 0.3)
        ax.axis["x1"].set_axisline_style("->", size=1.5)

        ax.axis["x2"] = ax.new_floating_axis(1, 0.7)
        ax.axis["x2"].set_axisline_style("->", size=1.5)

        return ax


    fig = plt.figure(figsize=(6, 2.5))
    fig.subplots_adjust(bottom=0.2, top=0.8)

    ax1 = setup_axes(fig, 121)
    ax1.axis["x1"].label.set_text("rotation=0")
    ax1.axis["x1"].toggle(ticklabels=False)

    ax1.axis["x2"].label.set_text("rotation=10")
    ax1.axis["x2"].label.set_rotation(10)
    ax1.axis["x2"].toggle(ticklabels=False)

    ax1.annotate("label direction=$+$", (0.5, 0), xycoords="axes fraction",
                 xytext=(0, -10), textcoords="offset points",
                 va="top", ha="center")

    ax2 = setup_axes(fig, 122)

    ax2.axis["x1"].set_axislabel_direction("-")
    ax2.axis["x2"].set_axislabel_direction("-")

    ax2.axis["x1"].label.set_text("rotation=0")
    ax2.axis["x1"].toggle(ticklabels=False)

    ax2.axis["x2"].label.set_text("rotation=10")
    ax2.axis["x2"].label.set_rotation(10)
    ax2.axis["x2"].toggle(ticklabels=False)

    ax2.annotate("label direction=$-$", (0.5, 0), xycoords="axes fraction",
                 xytext=(0, -10), textcoords="offset points",
                 va="top", ha="center")

    plt.show()


.. _sphx_glr_download_gallery_axisartist_axis_direction_demo_step04.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: axis_direction_demo_step04.py <axis_direction_demo_step04.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: axis_direction_demo_step04.ipynb <axis_direction_demo_step04.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
